added libTUIO to the game

--- a/Game/nbproject/project.properties
+++ b/Game/nbproject/project.properties
@@ -27,6 +27,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.ibxm.jar-1=../Libraries/slick/lib/ibxm.jar
+file.reference.libTUIO.jar=../libTUIO.jar
 file.reference.lwjgl.jar-1=../Libraries/slick/lib/lwjgl.jar
 file.reference.slick-sources.jar=../Libraries/slick/lib/slick-sources.jar
 file.reference.slick.jar-1=../Libraries/slick/lib/slick.jar
@@ -36,7 +37,8 @@ javac.classpath=\
     ${file.reference.ibxm.jar-1}:\
     ${file.reference.lwjgl.jar-1}:\
     ${file.reference.slick.jar-1}:\
-    ${file.reference.slick-sources.jar}
+    ${file.reference.slick-sources.jar}:\
+    ${file.reference.libTUIO.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
