--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ local.properties
 /HerdinatorServer/dist/
 /Herdinator/nbproject/private/
 /Herdinator/build/
+/Herdinator/nbproject/project.properties
