--- a/Herdinator/nbproject/project.properties
+++ b/Herdinator/nbproject/project.properties
@@ -1,6 +1,5 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 application.title=Herdinator
@@ -29,7 +28,7 @@ endorsed.classpath=
 excludes=
 file.reference.ibxm.jar-1=../Libraries/slick/lib/ibxm.jar
 file.reference.libTUIO.jar=../libTUIO.jar
-file.reference.lwjgl.jar-1=../Libraries/slick/lib/lwjgl.jar
+file.reference.lwjgl.jar=../Libraries/slick/lib/lwjgl.jar
 file.reference.slick-sources.jar=../Libraries/slick/lib/slick-sources.jar
 file.reference.slick.jar-1=../Libraries/slick/lib/slick.jar
 includes=**
@@ -38,7 +37,7 @@ jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.ibxm.jar-1}:\
-    ${file.reference.lwjgl.jar-1}:\
+    ${file.reference.lwjgl.jar}:\
     ${file.reference.slick.jar-1}:\
     ${file.reference.slick-sources.jar}:\
     ${file.reference.libTUIO.jar}
@@ -85,7 +84,7 @@ run.classpath=\
 # Space-separated list of JVM arguments used when running the project
 # (you may also define separate properties like run-sys-prop.name=value instead of -Dname=value
 # or test-sys-prop.name=value to set system properties for unit tests):
-run.jvmargs=-Djava.library.path=../Libraries/slick/lib/natives/win64
+run.jvmargs=-Djava.library.path=../Libraries/slick/lib/natives/mac
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
