Updated the server (not yet working).

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,4 @@ local.properties
 /Herdinator/build/
 /Herdinator/nbproject/project.properties
 /Herdinator/dist/
+/HerdinatorServerHandler/nbproject/private/
