--- a/HerdinatorServer/nbproject/project.properties
+++ b/HerdinatorServer/nbproject/project.properties
@@ -1,40 +1,90 @@
-build.classes.excludes=**/*.java,**/*.form,**/.nbattrs
+annotation.processing.enabled=true
+annotation.processing.enabled.in.editor=false
+annotation.processing.processors.list=
+annotation.processing.run.all.processors=true
+annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=HerdinatorServer
+application.vendor=bootsman
+build.classes.dir=${build.dir}/classes
+build.classes.excludes=**/*.java,**/*.form
+# This directory is removed when the project is cleaned:
 build.dir=build
 build.generated.dir=${build.dir}/generated
-client.module.uri=HerdinatorServer-war
-client.urlPart=
-debug.classpath=${javac.classpath}::${jar.content.additional}:${run.classpath}
-display.browser=true
+build.generated.sources.dir=${build.dir}/generated-sources
+# Only compile against the classpath explicitly listed here:
+build.sysclasspath=ignore
+build.test.classes.dir=${build.dir}/test/classes
+build.test.results.dir=${build.dir}/test/results
+# Uncomment to specify the preferred debugger connection transport:
+#debug.transport=dt_socket
+debug.classpath=\
+    ${run.classpath}
+debug.test.classpath=\
+    ${run.test.classpath}
+# This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/${jar.name}
-endorsed.classpath=\
-    ${libs.javaee-endorsed-api-6.0.classpath}
-j2ee.appclient.mainclass.args=${j2ee.appclient.tool.args}
-j2ee.compile.on.save=true
-j2ee.deploy.on.save=true
-j2ee.platform=1.6
-j2ee.platform.classpath=
-j2ee.platform.embeddableejb.classpath=${j2ee.server.home}/lib/embedded/glassfish-embedded-static-shell.jar
-j2ee.platform.wscompile.classpath=${j2ee.server.home}/modules/webservices-osgi.jar
-j2ee.platform.wsgen.classpath=${j2ee.server.home}/modules/webservices-osgi.jar:${j2ee.server.home}/modules/endorsed/webservices-api-osgi.jar:${j2ee.server.home}/modules/jaxb-osgi.jar:${j2ee.server.home}/modules/endorsed/jaxb-api-osgi.jar:${j2ee.server.home}/modules/javax.ejb.jar
-j2ee.platform.wsimport.classpath=${j2ee.server.home}/modules/webservices-osgi.jar:${j2ee.server.home}/modules/endorsed/webservices-api-osgi.jar:${j2ee.server.home}/modules/jaxb-osgi.jar:${j2ee.server.home}/modules/endorsed/jaxb-api-osgi.jar:${j2ee.server.home}/modules/javax.ejb.jar
-j2ee.platform.wsit.classpath=
-j2ee.server.type=gfv3ee6
+dist.jar=${dist.dir}/HerdinatorServer.jar
+dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
+excludes=
+file.reference.json-simple-1.1.1.jar=../Libraries/json-simple-1.1.1/json-simple-1.1.1.jar
+file.reference.tomcat-embed-core.jar=../Libraries/apache-tomcat-7.0.34-embed/tomcat-embed-core.jar
+file.reference.tomcat-embed-logging-juli.jar=../Libraries/apache-tomcat-7.0.34-embed/tomcat-embed-logging-juli.jar
+includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
-jar.content.additional=\
-    ${reference.HerdinatorServer-war.dist-ear}:\
-    ${reference.HerdinatorServer-ejb.dist-ear}
-jar.name=HerdinatorServer.ear
-javac.debug=true
+jar.index=${jnlp.enabled}
+javac.classpath=\
+    ${file.reference.tomcat-embed-core.jar}:\
+    ${file.reference.tomcat-embed-logging-juli.jar}:\
+    ${file.reference.json-simple-1.1.1.jar}
+# Space-separated list of extra javac options
+javac.compilerargs=
 javac.deprecation=false
+javac.processorpath=\
+    ${javac.classpath}
 javac.source=1.6
 javac.target=1.6
-meta.inf=src/conf
-no.dependencies=false
+javac.test.classpath=\
+    ${javac.classpath}:\
+    ${build.classes.dir}
+javac.test.processorpath=\
+    ${javac.test.classpath}
+javadoc.additionalparam=
+javadoc.author=false
+javadoc.encoding=${source.encoding}
+javadoc.noindex=false
+javadoc.nonavbar=false
+javadoc.notree=false
+javadoc.private=false
+javadoc.splitindex=true
+javadoc.use=true
+javadoc.version=false
+javadoc.windowtitle=
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=default
+jnlp.offline-allowed=false
+jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
+main.class=herdinatorserver.ServerHandler
+manifest.file=manifest.mf
+meta.inf.dir=${src.dir}/META-INF
+mkdist.disabled=false
 platform.active=default_platform
-project.HerdinatorServer-ejb=HerdinatorServer-ejb
-project.HerdinatorServer-war=HerdinatorServer-war
-reference.HerdinatorServer-ejb.dist-ear=${project.HerdinatorServer-ejb}/dist/HerdinatorServer-ejb.jar
-reference.HerdinatorServer-war.dist-ear=${project.HerdinatorServer-war}/dist/HerdinatorServer-war.war
-resource.dir=setup
-source.root=.
+run.classpath=\
+    ${javac.classpath}:\
+    ${build.classes.dir}
+# Space-separated list of JVM arguments used when running the project.
+# You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
+# To set system properties for unit tests define test-sys-prop.name=value:
+run.jvmargs=
+run.test.classpath=\
+    ${javac.test.classpath}:\
+    ${build.test.classes.dir}
+source.encoding=UTF-8
+src.dir=src
+test.src.dir=test
