--- a/.gitignore
+++ b/.gitignore
@@ -25,10 +25,8 @@ local.properties
 # Herdinator.
 /HerdinatorServer/nbproject/private/*
 /HerdinatorServer/build/*
-!/HerdinatorServer/build.xml
-/HerdinatorServer/dist/
-/Herdinator/nbproject/private/
+/HerdinatorServer/dist/*
+/Herdinator/nbproject/private/*
 /Herdinator/build/*
-!/Herdinator/build.xml
 #/Herdinator/nbproject/project.properties
-/Herdinator/dist/
+/Herdinator/dist/*
