deleted redundant library files for windows64

--- a/Herdinator/nbproject/project.properties
+++ b/Herdinator/nbproject/project.properties
@@ -29,7 +29,7 @@ endorsed.classpath=
 excludes=
 file.reference.ibxm.jar-1=../Libraries/slick/lib/ibxm.jar
 file.reference.libTUIO.jar=../Libraries/TUIO/libTUIO.jar
-file.reference.lwjgl.jar=../Libraries/slick/lib/lwjgl.jar
+file.reference.lwjgl64.jar=../Libraries/slick/lib/lwjgl64.jar
 file.reference.slick-sources.jar=../Libraries/slick/lib/slick-sources.jar
 file.reference.slick.jar-1=../Libraries/slick/lib/slick.jar
 includes=**
@@ -38,8 +38,8 @@ jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.ibxm.jar-1}:\
-    ${file.reference.lwjgl.jar}:\
     ${file.reference.slick.jar-1}:\
+    ${file.reference.lwjgl64.jar}:\
     ${file.reference.slick-sources.jar}:\
     ${file.reference.libTUIO.jar}
 # Space-separated list of extra javac options
@@ -85,7 +85,7 @@ run.classpath=\
 # Space-separated list of JVM arguments used when running the project
 # (you may also define separate properties like run-sys-prop.name=value instead of -Dname=value
 # or test-sys-prop.name=value to set system properties for unit tests):
-run.jvmargs=-Djava.library.path=../Libraries/slick/lib/natives/mac
+run.jvmargs=-Djava.library.path=../Libraries/slick/lib/natives/win64
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
